--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^6.0.15",
     "multer": "^1.4.2",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "randomstring": "^1.2.2"
   },
   "engines": {
     "node": "v16.13.0",
